added props to slider and pretty changes in other files

--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -13,6 +13,6 @@
       <main class="main">@@include("../chunk/slider-top.html")</main>
       @@include("../chunk/footer.html")
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main-min.js"></script>
   </body>
 </html>
