started project section

--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="wrapper">
       @@include("../chunk/header.html")
-      <main class="main">@@include("../chunk/slider-top.html")</main>
+      <main class="main">
+        @@include("../chunk/slider-top.html")
+        @@include("../chunk/projects.html")
+      </main>
       @@include("../chunk/footer.html")
     </div>
     <script src="./js/main-min.js"></script>
