swiper works only with CDN :(

--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ceramica</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/style.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -17,5 +22,6 @@
       @@include("../chunk/footer.html")
     </div>
     <script src="./js/main-min.js"></script>
+    <script type="module" src="./js/swiper-min.js"></script>
   </body>
 </html>
