section projects isn't work :(

--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       @@include("../chunk/header.html")
       <main class="main">
-        @@include("../chunk/slider-top.html")
+        @@include("../chunk/underheader.html")
         @@include("../chunk/projects.html")
       </main>
       @@include("../chunk/footer.html")
