project slider done

--- a/Ceramica/src/chunk/projects.html
+++ b/Ceramica/src/chunk/projects.html
@@ -1,3 +1,4 @@
+<section class="projects">@@include("./project.html")</section>
 <!-- <section class="projects">
   <div class="cathword container">
     <h2 class="cathword__text">Наши проекты</h2>
