magnifying done. Flex isn't work with SwiperJS. What about grid based layout?

--- a/Ceramica/src/chunk/project.html
+++ b/Ceramica/src/chunk/project.html
@@ -7,13 +7,13 @@
           alt=""
           class="project-slider__img-big"
         />
-        <div class="swiper-slide__glass">
+        <div class="swiper-slide__glass glass">
           <svg
             width="57"
             height="58"
             viewBox="0 0 57 58"
             xmlns="http://www.w3.org/2000/svg"
-            class="glass"
+            class="glass__magnify"
           >
             <path
               fill-rule="evenodd"
@@ -34,13 +34,13 @@
           alt=""
           class="project-slider__img-big"
         />
-        <div class="swiper-slide__glass">
+        <div class="swiper-slide__glass glass">
           <svg
             width="57"
             height="58"
             viewBox="0 0 57 58"
             xmlns="http://www.w3.org/2000/svg"
-            class="glass"
+            class="glass__magnify"
           >
             <path
               fill-rule="evenodd"
@@ -61,13 +61,13 @@
           alt=""
           class="project-slider__img-big"
         />
-        <div class="swiper-slide__glass">
+        <div class="swiper-slide__glass glass">
           <svg
             width="57"
             height="58"
             viewBox="0 0 57 58"
             xmlns="http://www.w3.org/2000/svg"
-            class="glass"
+            class="glass__magnify"
           >
             <path
               fill-rule="evenodd"
