--- a/Ceramica/src/chunk/projects.html
+++ b/Ceramica/src/chunk/projects.html
@@ -1,4 +1,58 @@
-<section class="projects">@@include("./project.html")</section>
+<section class="projects">
+  <div class="cathword container">
+    <h2 class="cathword__text">Наши проекты</h2>
+  </div>
+  <div class="projects__inner full-slider">
+    <div class="container">
+      <div class="full-slider__content sense">
+        <div class="sense__navigation">
+          <button class="btn sense__all">СМОТРЕТЬ ВСЕ ПРОЕКТЫ</button>
+          <div class="sense__nav full-slider__nav">
+            <button class="full-slider__prev projects__arrow">
+              <svg
+                width="27"
+                height="8"
+                viewBox="0 0 27 8"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M3.72351 0.464562L0.541533 3.64654C0.346272 3.8418 0.346272 4.15839 0.541533 4.35365L3.72351 7.53563C3.91878 7.73089 4.23536 7.73089 4.43062 7.53563C4.62588 7.34037 4.62588 7.02378 4.43062 6.82852L2.10219 4.5001H26.9641V3.5001H2.10219L4.43062 1.17167C4.62588 0.976407 4.62588 0.659824 4.43062 0.464562C4.23536 0.2693 3.91878 0.2693 3.72351 0.464562Z"
+                />
+              </svg>
+            </button>
+            <button class="full-slider__next projects__arrow">
+              <svg
+                width="27"
+                height="8"
+                viewBox="0 0 27 8"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M23.5265 0.464562L26.7085 3.64654C26.9037 3.8418 26.9037 4.15839 26.7085 4.35365L23.5265 7.53563C23.3312 7.73089 23.0146 7.73089 22.8194 7.53563C22.6241 7.34037 22.6241 7.02378 22.8194 6.82852L25.1478 4.5001H0.28595V3.5001H25.1478L22.8194 1.17167C22.6241 0.976407 22.6241 0.659824 22.8194 0.464562C23.0146 0.2693 23.3312 0.2693 23.5265 0.464562Z"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="sense__inner">
+          <h2 class="sense__header">Сеть фитнес-центров Start&Finish</h2>
+          <div class="sense__text">
+            <p>Создали общий стиль для фасада и внутренней отделки</p>
+            <p>
+              Еще несколько коротких предложений о том, что было сделано на
+              проекте
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    @@include("./project.html")
+  </div>
+</section>
 <!-- <section class="projects">
   <div class="cathword container">
     <h2 class="cathword__text">Наши проекты</h2>
