coments were removed

--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -17,7 +17,7 @@
       @@include("../chunk/header.html")
       <main class="main">
         @@include("../chunk/underheader.html")
-        @@include("../chunk/projects.html")
+        @@include("../chunk/projects.html") @@include("../chunk/blog.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
