--- a/Ceramica/src/chunk/blog.html
+++ b/Ceramica/src/chunk/blog.html
@@ -1,5 +1,130 @@
 <section class="blog">
-  <div class="container">
-    
+  <div class="container cathword blog__cathword">
+    <h2 class="cathword__text">интересное из блога</h2>
+    <button class="btn blog__btn"><span>перейти в блог</span></button>
+  </div>
+  <div class="blog__carousel">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="slide__wrapper">
+          <div class="blog__card card">
+            <img
+              src="./img/blog/blog_1.jpg"
+              alt="Blog photo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <div class="card__meta">
+                <span class="card__type card__type-news">НОВОСТЬ</span>
+                <span class="card__date">10 АПРЕЛЯ 2020</span>
+              </div>
+              <a href="#" class="card__link"
+                >Приглашаем посетить выставку Cevisama 2020</a
+              >
+              <div class="card__statistic">
+                <span class="card__view">569</span>
+                <span class="card__comments">21</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide__wrapper">
+          <div class="blog__card card">
+            <img
+              src="./img/blog/blog_2.jpg"
+              alt="Blog photo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <div class="card__meta">
+                <span class="card__type card__type-article"> СТАТЬЯ </span>
+                <span class="card__date">10 АПРЕЛЯ 2020</span>
+              </div>
+              <a href="#" class="card__link"
+                >Как правильно выбирать керамическую плитку</a
+              >
+              <div class="card__statistic">
+                <span class="card__view">569</span>
+                <span class="card__comments">21</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide__wrapper">
+          <div class="blog__card card">
+            <img
+              src="./img/blog/blog_3.jpg"
+              alt="Blog photo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <div class="card__meta">
+                <span class="card__type card__type-article">СТАТЬЯ</span>
+                <span class="card__date">10 АПРЕЛЯ 2020</span>
+              </div>
+              <a href="#" class="card__link"
+                >Керамогранит. Виды и применение. Заголовок в две строчки</a
+              >
+              <div class="card__statistic">
+                <span class="card__view">569</span>
+                <span class="card__comments">21</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide__wrapper">
+          <div class="blog__card card">
+            <img
+              src="./img/blog/blog_4.jpg"
+              alt="Blog photo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <div class="card__meta">
+                <span class="card__type card__type-news">НОВОСТЬ</span>
+                <span class="card__date">10 АПРЕЛЯ 2020</span>
+              </div>
+              <a href="#" class="card__link"
+                >Приглашаем посетить выставку Cevisama 2020</a
+              >
+              <div class="card__statistic">
+                <span class="card__view">569</span>
+                <span class="card__comments">21</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="slide__wrapper">
+          <div class="blog__card card">
+            <img
+              src="./img/blog/blog_5.jpg"
+              alt="Blog photo"
+              class="card__img"
+            />
+            <div class="card__description">
+              <div class="card__meta">
+                <span class="card__type card__type-article">СТАТЬЯ</span>
+                <span class="card__date">10 АПРЕЛЯ 2020</span>
+              </div>
+              <a href="#" class="card__link"
+                >Как правильно выбирать керамическую плитку</a
+              >
+              <div class="card__statistic">
+                <span class="card__view">569</span>
+                <span class="card__comments">21</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
