--- a/Ceramica/src/html/index.html
+++ b/Ceramica/src/html/index.html
@@ -18,6 +18,7 @@
       <main class="main">
         @@include("../chunk/underheader.html")
         @@include("../chunk/projects.html") @@include("../chunk/blog.html")
+        @@include("../chunk/instagram.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
