--- a/Ceramica/src/chunk/projects.html
+++ b/Ceramica/src/chunk/projects.html
@@ -43,8 +43,10 @@
               </div>
             </div>
             <div class="sense__inner">
-              <h2 class="sense__header">Сеть фитнес-центров Start&Finish</h2>
-              <div class="sense__text">
+              <h2 class="sense__header title">
+                Сеть фитнес-центров Start&Finish
+              </h2>
+              <div class="sense__text meaning">
                 <p>Создали общий стиль для фасада и внутренней отделки</p>
                 <p>
                   Еще несколько коротких предложений о том, что было сделано на
