--- a/Ceramica/src/chunk/project.html
+++ b/Ceramica/src/chunk/project.html
@@ -1,4 +1,4 @@
-<section class="project">
+<div class="project">
   <div class="project-slider">
     <div class="swiper-wrapper swiper-no-swiping">
       <div class="swiper-slide project-slider__preview">
@@ -111,4 +111,4 @@
       </div>
     </div>
   </div>
-</section>
+</div>
