look for container where it's like wrapper

--- a/Ceramica/src/chunk/projects.html
+++ b/Ceramica/src/chunk/projects.html
@@ -6,7 +6,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="projects__inner full-slider">
-          <div class="full-slider__content sense">
+          <div class="full-slider__content sense container">
             <div class="sense__navigation">
               <button class="btn sense__all">
                 <span>СМОТРЕТЬ ВСЕ ПРОЕКТЫ</span>
