--- a/Strahovanie/src/chunk/header.html
+++ b/Strahovanie/src/chunk/header.html
@@ -1,20 +1,22 @@
 <header class="header">
-  <div class="container header__inner">
-    <img src="./img/Logo_top.png" alt="Logo" class="header__logo" />
-    <nav class="header__nav nav">
-      <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link">ОСАГО</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">КАСКО</a></li>
-        <li class="nav__item">
-          <a href="#" class="nav__link">Зеленая карта</a>
-        </li>
-        <li class="nav__item">
-          <a href="#" class="nav__link">Туристическое страхование</a>
-        </li>
-        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-      </ul>
-    </nav>
-    <button class="btn header__btn"><span>заказать звонок</span></button>
+  <div class="container">
+    <div class="header__inner">
+      <img src="./img/Logo_top.png" alt="Logo" class="header__logo" />
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#" class="nav__link">ОСАГО</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">КАСКО</a></li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Зеленая карта</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Туристическое страхование</a>
+          </li>
+          <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+        </ul>
+      </nav>
+      <button class="btn header__btn"><span>заказать звонок</span></button>
+    </div>
   </div>
 </header>
