--- a/Strahovanie/src/html/index.html
+++ b/Strahovanie/src/html/index.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
       @@include("../chunk/header.html")
       <main class="main"></main>
+      @@include("../chunk/footer.html")
     </div>
   </body>
 </html>
