--- a/Strahovanie/src/html/index.html
+++ b/Strahovanie/src/html/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       @@include("../chunk/header.html")
-      <main class="main"></main>
+      <main class="main">@@include("../chunk/insurance-case.html")</main>
       @@include("../chunk/footer.html")
     </div>
   </body>
