--- a/Strahovanie/src/chunk/footer.html
+++ b/Strahovanie/src/chunk/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__wrapper">
       <div class="footer__logotype">
-        <img src="./img/Logo_bot.png" alt="Logo" />
+        <img src="./img/Logo_bot.svg" alt="Logo" width="323" height="71" />
       </div>
       <nav class="footer__navigation navigation">
         <ul class="navigation__list">
