--- a/Strahovanie/src/chunk/insurance-case.html
+++ b/Strahovanie/src/chunk/insurance-case.html
@@ -2,7 +2,12 @@
   <div class="container">
     <div class="insurance__wrapper">
       <div class="insurance__image">
-        <img src="./img/papers.png" alt="Insurance contract" />
+        <img
+          src="./img/papers.png"
+          alt="Insurance contract"
+          width="650"
+          height="520"
+        />
       </div>
       <div class="insurance__content action-plan">
         <h2 class="action-plan__header">
