--- a/Strahovanie/src/chunk/header.html
+++ b/Strahovanie/src/chunk/header.html
@@ -1,7 +1,13 @@
 <header class="header">
   <div class="container">
     <div class="header__inner">
-      <img src="./img/Logo_top.png" alt="Logo" class="header__logo" />
+      <img
+        src="./img/Logo_top.svg"
+        alt="Logo"
+        class="header__logo"
+        width="171"
+        height="53"
+      />
       <nav class="header__nav nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">ОСАГО</a></li>
