--- a/Strahovanie/src/chunk/insurance-case.html
+++ b/Strahovanie/src/chunk/insurance-case.html
@@ -10,7 +10,7 @@
         />
       </div>
       <div class="insurance__content action-plan">
-        <h2 class="action-plan__header">
+        <h2 class="action-plan__header header">
           Что делать при наступлении страхового случая?
         </h2>
         <ul class="action-plan__list">
