--- a/Strahovanie/src/html/index.html
+++ b/Strahovanie/src/html/index.html
@@ -12,6 +12,7 @@
       @@include("../chunk/header.html")
       <main class="main">
         @@include("../chunk/offers/greencard.html")
+        @@include("../chunk/offers/offers.html")
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
