--- a/Strahovanie/src/html/index.html
+++ b/Strahovanie/src/html/index.html
@@ -13,6 +13,8 @@
       <main class="main">
         @@include("../chunk/offers/greencard.html")
         @@include("../chunk/offers/offers.html")
+        @@include("../chunk/offers/proposal.html")
+
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
