--- a/Strahovanie/src/chunk/offers/proposal.html
+++ b/Strahovanie/src/chunk/offers/proposal.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="proposals__list">
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/vuso.svg"
@@ -78,7 +78,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/upsk.svg"
@@ -154,7 +154,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/asko.svg"
@@ -230,7 +230,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/oranta.svg"
@@ -306,7 +306,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/vuso.svg"
@@ -382,7 +382,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/upsk.svg"
@@ -458,7 +458,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/asko.svg"
@@ -534,7 +534,7 @@
         </div>
       </li>
       <li class="proposals__item">
-        <div class="offer__wrapper">
+        <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
             <img
               src="./img/offers/oranta.svg"
