--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -12,6 +12,7 @@
       @@include("../chunk/header.html")
       <main class="main">
         @@include("../chunk/about/about-us.html")
+        @@include("../chunk/about/insurance-types.html")
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
