--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/style.min.css" />
     <title>О нас</title>
   </head>
@@ -13,9 +17,12 @@
       <main class="main">
         @@include("../chunk/about/about-us.html")
         @@include("../chunk/about/insurance-types.html")
+        @@include("../chunk/insurance-arrange.html")
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script type="module" src="./js/swiper.js"></script>
   </body>
 </html>
