--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -23,6 +23,6 @@
       @@include("../chunk/footer.html")
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/swiper.js"></script>
+    <script type="module" src="./js/makeRequest.js"></script>
   </body>
 </html>
