confince without slider

--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -18,11 +18,13 @@
         @@include("../chunk/about/about-us.html")
         @@include("../chunk/about/insurance-types.html")
         @@include("../chunk/insurance-arrange.html")
+        @@include("../chunk/confidence.html")
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/makeRequest-min.js"></script>
+    <script type="module" src="./js/confidence-min.js"></script>
   </body>
 </html>
