--- a/Strahovanie/src/chunk/confidence.html
+++ b/Strahovanie/src/chunk/confidence.html
@@ -1,6 +1,6 @@
 <section class="confirence">
-  <div class="container">
-    <div class="confirence__swiper">
+  <div class="container confirence__container">
+    <div class="confirence__wrapper">
       <div class="confirence__navigation">
         <h2 class="header confirence__header">Нам доверяют сотни людей</h2>
         <div class="confirence__nav">
@@ -40,211 +40,210 @@
           </span>
         </div>
       </div>
-
-      <!-- <div class="confirence__wrapper"> -->
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="review">
-            <div class="review__card">
-              <ul class="review__rating">
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-              </ul>
-              <div class="review__text">
-                У клиентов бывают случаи в жизни, когда оформить быстрый кредит
-                онлайн в Украине попросту необходимо. Некоторым он нужен для
-                открытия бизнеса
-              </div>
-              <div class="review__author author">
-                <div class="author__photo">
-                  <img
-                    src="./img/author.png"
-                    alt="author"
-                    width="60"
-                    height="60"
-                  />
+      <div class="confirence__swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="review">
+              <div class="review__card">
+                <ul class="review__rating">
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                </ul>
+                <div class="review__text">
+                  У клиентов бывают случаи в жизни, когда оформить быстрый
+                  кредит онлайн в Украине попросту необходимо. Некоторым он
+                  нужен для открытия бизнеса
                 </div>
-                <div class="author__info">
-                  <span class="author__name">Елена</span>
-                  <span class="author__time">12.05.2018</span>
+                <div class="review__author author">
+                  <div class="author__photo">
+                    <img
+                      src="./img/author.png"
+                      alt="author"
+                      width="60"
+                      height="60"
+                    />
+                  </div>
+                  <div class="author__info">
+                    <span class="author__name">Елена</span>
+                    <span class="author__time">12.05.2018</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review">
+              <div class="review__card">
+                <ul class="review__rating">
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                </ul>
+                <div class="review__text">
+                  У клиентов бывают случаи в жизни, когда оформить быстрый
+                  кредит онлайн в Украине попросту необходимо. Некоторым он
+                  нужен для открытия бизнеса
+                </div>
+                <div class="review__author author">
+                  <div class="author__photo">
+                    <img
+                      src="./img/author.png"
+                      alt="author"
+                      width="60"
+                      height="60"
+                    />
+                  </div>
+                  <div class="author__info">
+                    <span class="author__name">Елена</span>
+                    <span class="author__time">12.05.2018</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="review">
+              <div class="review__card">
+                <ul class="review__rating">
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                  <li class="review__star">
+                    <img
+                      src="./icons/Star.svg"
+                      alt="star"
+                      width="20"
+                      height="20"
+                    />
+                  </li>
+                </ul>
+                <div class="review__text">
+                  У клиентов бывают случаи в жизни, когда оформить быстрый
+                  кредит онлайн в Украине попросту необходимо. Некоторым он
+                  нужен для открытия бизнеса
+                </div>
+                <div class="review__author author">
+                  <div class="author__photo">
+                    <img
+                      src="./img/author.png"
+                      alt="author"
+                      width="60"
+                      height="60"
+                    />
+                  </div>
+                  <div class="author__info">
+                    <span class="author__name">Елена</span>
+                    <span class="author__time">12.05.2018</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
-          <div class="review">
-            <div class="review__card">
-              <ul class="review__rating">
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-              </ul>
-              <div class="review__text">
-                У клиентов бывают случаи в жизни, когда оформить быстрый кредит
-                онлайн в Украине попросту необходимо. Некоторым он нужен для
-                открытия бизнеса
-              </div>
-              <div class="review__author author">
-                <div class="author__photo">
-                  <img
-                    src="./img/author.png"
-                    alt="author"
-                    width="60"
-                    height="60"
-                  />
-                </div>
-                <div class="author__info">
-                  <span class="author__name">Елена</span>
-                  <span class="author__time">12.05.2018</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="review">
-            <div class="review__card">
-              <ul class="review__rating">
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-                <li class="review__star">
-                  <img
-                    src="./icons/Star.svg"
-                    alt="star"
-                    width="20"
-                    height="20"
-                  />
-                </li>
-              </ul>
-              <div class="review__text">
-                У клиентов бывают случаи в жизни, когда оформить быстрый кредит
-                онлайн в Украине попросту необходимо. Некоторым он нужен для
-                открытия бизнеса
-              </div>
-              <div class="review__author author">
-                <div class="author__photo">
-                  <img
-                    src="./img/author.png"
-                    alt="author"
-                    width="60"
-                    height="60"
-                  />
-                </div>
-                <div class="author__info">
-                  <span class="author__name">Елена</span>
-                  <span class="author__time">12.05.2018</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- </div> -->
       </div>
     </div>
   </div>
