--- a/Strahovanie/src/chunk/insurance-case.html
+++ b/Strahovanie/src/chunk/insurance-case.html
@@ -1,38 +1,40 @@
 <section class="insurance">
-  <div class="container">
+  <div class="container insurance__container">
     <div class="insurance__wrapper">
-      <div class="insurance__image">
-        <img
-          src="./img/papers.png"
-          alt="Insurance contract"
-          width="650"
-          height="520"
-        />
-      </div>
-      <div class="insurance__content action-plan">
-        <h2 class="action-plan__header header">
-          Что делать при наступлении страхового случая?
-        </h2>
-        <ul class="action-plan__list">
-          <li class="action-plan__item">
-            <span class="action-plan__text">
-              Связаться с контакт-центром ассистанса
-            </span>
-          </li>
-          <li class="action-plan__item">
-            <span class="action-plan__text"
-              >Сообщить название страховой компании и номер договора</span
-            >
-          </li>
-          <li class="action-plan__item">
-            <span class="action-plan__text"
-              >Действовать согласно полученных инструкций</span
-            >
-          </li>
-        </ul>
-        <a href="#" download="" class="btn action-plan__button"
-          >Скачать документ-памятку</a
-        >
+      <div class="insurance__inner">
+        <div class="insurance__image">
+          <img
+            src="./img/papers.png"
+            alt="Insurance contract"
+            width="650"
+            height="520"
+          />
+        </div>
+        <div class="insurance__content action-plan">
+          <h2 class="action-plan__header header">
+            Что делать при наступлении страхового случая?
+          </h2>
+          <ul class="action-plan__list">
+            <li class="action-plan__item">
+              <span class="action-plan__text">
+                Связаться с контакт-центром ассистанса
+              </span>
+            </li>
+            <li class="action-plan__item">
+              <span class="action-plan__text"
+                >Сообщить название страховой компании и номер договора</span
+              >
+            </li>
+            <li class="action-plan__item">
+              <span class="action-plan__text"
+                >Действовать согласно полученных инструкций</span
+              >
+            </li>
+          </ul>
+          <a href="#" download="" class="btn action-plan__button"
+            >Скачать документ-памятку</a
+          >
+        </div>
       </div>
     </div>
   </div>
