--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -18,7 +18,7 @@
         @@include("../chunk/about/about-us.html")
         @@include("../chunk/about/insurance-types.html")
         @@include("../chunk/insurance-arrange.html")
-        @@include("../chunk/confidence.html")
+        @@include("../chunk/confidence.html") @@include("../chunk/faq.html")
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
