--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -26,5 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/makeRequest-min.js"></script>
     <script type="module" src="./js/confidence-min.js"></script>
+    <script src="./js/accordeon-min.js"></script>
   </body>
 </html>
