--- a/Strahovanie/src/html/about.html
+++ b/Strahovanie/src/html/about.html
@@ -20,6 +20,7 @@
         @@include("../chunk/insurance-arrange.html")
         @@include("../chunk/confidence.html") @@include("../chunk/faq.html")
         @@include("../chunk/insurance-case.html")
+        @@include("../chunk/insurance-online.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
