--- a/Strahovanie/src/chunk/offers/proposal.html
+++ b/Strahovanie/src/chunk/offers/proposal.html
@@ -4,13 +4,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/vuso.svg"
-              alt="VUSO"
-              class="proposal__logo"
-              width="131"
-              height="32"
-            />
+            <div class="proposal__vuso"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -80,13 +74,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/upsk.svg"
-              alt="UPSK"
-              class="proposal__logo"
-              width="131"
-              height="29"
-            />
+            <div class="proposal__upsk"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -156,13 +144,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/asko.svg"
-              alt="ASKO"
-              class="proposal__logo"
-              width="131"
-              height="34"
-            />
+            <div class="proposal__asko"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -232,13 +214,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/oranta.svg"
-              alt="ORANTA"
-              class="proposal__logo"
-              width="121"
-              height="45"
-            />
+            <div class="proposal__oranta"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -308,13 +284,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/vuso.svg"
-              alt="VUSO"
-              class="proposal__logo"
-              width="131"
-              height="32"
-            />
+            <div class="proposal__vuso"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -384,13 +354,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/upsk.svg"
-              alt="UPSK"
-              class="proposal__logo"
-              width="131"
-              height="29"
-            />
+            <div class="proposal__upsk"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -460,13 +424,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/asko.svg"
-              alt="ASKO"
-              class="proposal__logo"
-              width="131"
-              height="34"
-            />
+            <div class="proposal__asko"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
@@ -536,13 +494,7 @@
       <li class="proposals__item">
         <div class="offer__wrapper proposals__wrapper">
           <div class="proposal">
-            <img
-              src="./img/offers/oranta.svg"
-              alt="ORANTA"
-              class="proposal__logo"
-              width="121"
-              height="45"
-            />
+            <div class="proposal__oranta"></div>
             <ul class="proposal__list characteristic">
               <li class="characteristic__item">
                 <ul class="characteristic__stars">
