--- a/Strahovanie/src/chunk/about/insurance-types.html
+++ b/Strahovanie/src/chunk/about/insurance-types.html
@@ -1,6 +1,6 @@
 <section class="insurances">
   <div class="container">
-    <h2 class="header insurances__header">Виды страхования</h2>
+    <h2 class="heading insurances__header">Виды страхования</h2>
     <div class="insurances__types belay">
       <ul class="belay__list">
         <li class="belay__item">
