--- a/Strahovanie/src/chunk/confidence.html
+++ b/Strahovanie/src/chunk/confidence.html
@@ -2,7 +2,7 @@
   <div class="container confirence__container">
     <div class="confirence__wrapper">
       <div class="confirence__navigation">
-        <h2 class="header confirence__header">Нам доверяют сотни людей</h2>
+        <h2 class="heading confirence__header">Нам доверяют сотни людей</h2>
         <div class="confirence__nav">
           <span class="confirence__btn confirence__prev">
             <svg
