--- a/Strahovanie/src/chunk/contacts/callback.html
+++ b/Strahovanie/src/chunk/contacts/callback.html
@@ -1,6 +1,6 @@
 <section class="callback">
   <div class="container">
-    <h2 class="header callback__header">Свяжитесь с нами</h2>
+    <h2 class="heading callback__header">Свяжитесь с нами</h2>
     <div class="feed">
       <form action="#" method="post" class="feed__form feedback">
         <ul class="feedback__list">
