--- a/Strahovanie/src/chunk/faq.html
+++ b/Strahovanie/src/chunk/faq.html
@@ -1,6 +1,6 @@
 <section class="faq">
   <div class="container faq__container">
-    <div class="faq__header header">Часто задаваемые вопросы</div>
+    <div class="faq__header heading">Часто задаваемые вопросы</div>
     <div class="faq__accordeon accordeon">
       <div class="accordeon__wrapper">
         <button class="accordeon__trigger trigger">
