--- a/Strahovanie/src/chunk/insurance-arrange.html
+++ b/Strahovanie/src/chunk/insurance-arrange.html
@@ -1,6 +1,6 @@
 <section class="arrange">
   <div class="container">
-    <h2 class="arrange__header header">Как оформить страховку</h2>
+    <h2 class="arrange__header heading">Как оформить страховку</h2>
 
     <div class="arrange__swiper">
       <div class="swiper__nav switch">
