--- a/Strahovanie/src/chunk/insurance-case.html
+++ b/Strahovanie/src/chunk/insurance-case.html
@@ -11,7 +11,7 @@
           />
         </div>
         <div class="insurance__content action-plan">
-          <h2 class="action-plan__header header">
+          <h2 class="action-plan__header heading">
             Что делать при наступлении страхового случая?
           </h2>
           <ul class="action-plan__list">
