--- a/Strahovanie/src/chunk/offers/greencard.html
+++ b/Strahovanie/src/chunk/offers/greencard.html
@@ -1,7 +1,7 @@
 <section class="greencard">
   <div class="container">
     <div class="offer__wrapper">
-      <h2 class="header greencard__header">Зеленая карта</h2>
+      <h2 class="heading greencard__header">Зеленая карта</h2>
       <div class="greencard__content">
         <ul class="greencard__list">
           <li class="greencard__item">
