--- a/Strahovanie/src/chunk/about/about-us.html
+++ b/Strahovanie/src/chunk/about/about-us.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="about__wrapper">
       <div class="about__content introduction">
-        <h2 class="introduction__header header">О нас</h2>
+        <h2 class="introduction__header heading">О нас</h2>
         <p class="introduction__text">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и
           вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
