--- a/Strahovanie/src/chunk/contacts/callback.html
+++ b/Strahovanie/src/chunk/contacts/callback.html
@@ -27,9 +27,7 @@
             <input type="text" name="theme" />
           </li>
           <li class="feedback__item">
-            <span class="feedback__label"
-              >Выберите продукт или тему сообщения</span
-            >
+            <span class="feedback__label">Текст вашего сообщения</span>
             <textarea name="text"></textarea>
           </li>
         </ul>
@@ -39,7 +37,7 @@
       </form>
       <div class="feed__instruction instruction">
         <div class="instruction__wrapper">
-          <h2 class="instruction__header header">Напишите нам если:</h2>
+          <h2 class="instruction__header heading">Напишите нам если:</h2>
           <ul class="instruction__list">
             <li class="instruction__item">
               <span>Не нашли подходящий вариант страховки</span>
