--- a/Strahovanie/src/chunk/insurance-arrange.html
+++ b/Strahovanie/src/chunk/insurance-arrange.html
@@ -25,13 +25,15 @@
         <div class="swiper-slide">
           <div class="step">
             <div class="step__wrapper">
-              <img
-                src="./icons/request.svg"
-                alt="request"
-                class="step__image"
-                width="149"
-                height="135"
-              />
+              <div class="step__img">
+                <img
+                  src="./icons/request.svg"
+                  alt="request"
+                  class="step__image"
+                  width="149"
+                  height="135"
+                />
+              </div>
               <div class="step__content">
                 <h4 class="step__header">Оформите заявку</h4>
                 <p class="step__text">
@@ -47,13 +49,15 @@
         <div class="swiper-slide">
           <div class="step">
             <div class="step__wrapper">
-              <img
-                src="./icons/request.svg"
-                alt="request"
-                class="step__image"
-                width="149"
-                height="135"
-              />
+              <div class="step__img">
+                <img
+                  src="./icons/request.svg"
+                  alt="request"
+                  class="step__image"
+                  width="149"
+                  height="135"
+                />
+              </div>
               <div class="step__content">
                 <h4 class="step__header">Оформите заявку</h4>
                 <p class="step__text">
@@ -69,13 +73,15 @@
         <div class="swiper-slide">
           <div class="step">
             <div class="step__wrapper">
-              <img
-                src="./icons/request.svg"
-                alt="request"
-                class="step__image"
-                width="149"
-                height="135"
-              />
+              <div class="step__img">
+                <img
+                  src="./icons/request.svg"
+                  alt="request"
+                  class="step__image"
+                  width="149"
+                  height="135"
+                />
+              </div>
               <div class="step__content">
                 <h4 class="step__header">Оформите заявку</h4>
                 <p class="step__text">
