--- a/Strahovanie/src/chunk/confidence.html
+++ b/Strahovanie/src/chunk/confidence.html
@@ -3,8 +3,8 @@
     <div class="confirence__wrapper">
       <div class="confirence__navigation">
         <h2 class="heading confirence__header">Нам доверяют сотни людей</h2>
-        <div class="confirence__nav">
-          <span class="confirence__btn confirence__prev">
+        <div class="confirence__nav controller">
+          <span class="controller__btn confirence__prev">
             <svg
               width="6"
               height="10"
@@ -21,7 +21,7 @@
               />
             </svg>
           </span>
-          <span class="confirence__btn confirence__next"
+          <span class="controller__btn confirence__next"
             ><svg
               width="6"
               height="10"
