--- a/Strahovanie/src/html/tourism.html
+++ b/Strahovanie/src/html/tourism.html
@@ -16,7 +16,7 @@
       @@include("../chunk/header.html")
       <main class="main">
         @@include("../chunk/tourism/insurance-tourism.html")
-        @@include("../chunk/tourism/advantages.html")
+        @@include("../chunk/advantages.html") @@include("../chunk/samples.html")
         @@include("../chunk/insurance-arrange.html")
         @@include("../chunk/confidence.html") @@include("../chunk/faq.html")
         @@include("../chunk/insurance-case.html")
@@ -27,6 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="./js/makeRequest-min.js"></script>
     <script type="module" src="./js/confidence-min.js"></script>
+    <script type="module" src="./js/samples-min.js"></script>
     <script src="./js/accordeon-min.js"></script>
   </body>
 </html>
