--- a/Strahovanie/src/chunk/tourism/insurance-tourism.html
+++ b/Strahovanie/src/chunk/tourism/insurance-tourism.html
@@ -65,7 +65,7 @@
               <div class="tourist__birthday">
                 <label for="birthday" class="trip__param">Дата рождения</label>
                 <input
-                  type="date"
+                  type="text"
                   name="birthday"
                   id="birthday"
                   class="touristic__input"
