--- a/Strahovanie/src/chunk/header.html
+++ b/Strahovanie/src/chunk/header.html
@@ -1,6 +1,15 @@
 <header class="header">
   <div class="container">
     <div class="header__inner">
+      <div class="header__hamburger hamburger">
+        <img
+          src="./icons/hamburger.svg"
+          alt="hamburger"
+          width="30"
+          height="20"
+          class="menu__open"
+        />
+      </div>
       <img
         src="./img/Logo_top.svg"
         alt="Logo"
@@ -8,7 +17,14 @@
         width="171"
         height="53"
       />
-      <nav class="header__nav nav">
+      <nav class="header__nav nav nav_show">
+        <img
+          src="./icons/close.svg"
+          alt="close"
+          width="15"
+          height="15"
+          class="menu__close"
+        />
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">ОСАГО</a></li>
           <li class="nav__item"><a href="#" class="nav__link">КАСКО</a></li>
