--- a/Strahovanie/src/html/index.html
+++ b/Strahovanie/src/html/index.html
@@ -14,10 +14,10 @@
         @@include("../chunk/offers/greencard.html")
         @@include("../chunk/offers/offers.html")
         @@include("../chunk/offers/proposal.html")
-
         @@include("../chunk/insurance-case.html")
       </main>
       @@include("../chunk/footer.html")
     </div>
+    <script src="./js/hamburger-min.js"></script>
   </body>
 </html>
