--- a/Strahovanie/src/chunk/header.html
+++ b/Strahovanie/src/chunk/header.html
@@ -17,7 +17,7 @@
         width="171"
         height="53"
       />
-      <nav class="header__nav nav nav_show">
+      <nav class="header__nav nav">
         <img
           src="./icons/close.svg"
           alt="close"
