--- a/Strahovanie/src/chunk/offers/greencard.html
+++ b/Strahovanie/src/chunk/offers/greencard.html
@@ -1,6 +1,6 @@
 <section class="greencard">
   <div class="container">
-    <div class="offer__wrapper">
+    <div class="greencard__wrapper">
       <h2 class="heading greencard__header">Зеленая карта</h2>
       <div class="greencard__content">
         <ul class="greencard__list">
